# Anzen

./: .gitignore  README.md  pyproject.toml
anzen/: __init__.py  __main__.py  claude_code_hook.py  cli.py  collector.py  demo.py  llm.py  report.py  rules.py  rules_builtin.yaml  store.py
anzen/server/: __init__.py  app.py  normalize.py
examples/: real_agent.py
tests/: test_claude_code_hook.py  test_end_to_end.py  test_home.py  test_normalize.py  test_normalize_claude_code.py  test_rules.py  test_server.py  test_store.py
