[project]
name = "anzen"
version = "0.1.0"
description = "Flight recorder and compliance auditor for AI agents — logs every agent action via OpenTelemetry and flags risky or non-compliant behavior."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "opentelemetry-proto>=1.25",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
demo = ["opentelemetry-sdk>=1.25", "opentelemetry-exporter-otlp-proto-http>=1.25"]
dev = [
    "pytest>=8.0",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
]

[project.scripts]
anzen = "anzen.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anzen"]
