[project]
name = "anzen"
version = "0.1.0"
description = "Flight recorder and compliance auditor for AI agents — logs every agent action via OpenTelemetry and flags risky or non-compliant behavior."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "opentelemetry-proto>=1.25",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
dev = [
    "pytest>=8.0",
    "anthropic>=0.40",
    "httpx2>=0.28",  # starlette TestClient transport
]

[project.scripts]
anzen = "anzen.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anzen"]
